--- a/test.html
+++ b/test.html
@@ -1,7 +1,7 @@
 		<div id="sina_keyword_ad_area2" class="articalContent   newfont_family">
 			<p STYLE="margin: 0px 0px 22px; padding: 0px; color: rgb(51, 51, 51); font-family:" MICROSOFT="" FONT-SIZE:="">注意注意注意!公告!这不是广告是测试例子</P>
-<p STYLE="margin: 0px 0px 22px; padding: 0px;" MICROSOFT="" FONT-SIZE:=""><font COLOR="#333333">标题：雅正幼儿园·图像OCR处理器*</FONT></P>
-<p STYLE="margin: 0px 0px 22px; padding: 0px; color: rgb(51, 51, 51); font-family:" MICROSOFT="" FONT-SIZE:=""><font COLOR="#333333">软件下载地址:http://www.yunquanzi.net/手工复制进入</FONT></P>
+<p STYLE="margin: 0px 0px 22px; padding: 0px;" MICROSOFT="" FONT-SIZE:=""><font COLOR="#333333">标题：图像OCR处理器*</FONT></P>
+<p STYLE="margin: 0px 0px 22px; padding: 0px; color: rgb(51, 51, 51); font-family:" MICROSOFT="" FONT-SIZE:=""><font COLOR="#333333">软件下载地址:http://www.baidu.com/手工复制进入</FONT></P>
 <p STYLE="margin: 0px 0px 22px; padding: 0px; color: rgb(51, 51, 51); font-family:" MICROSOFT="" FONT-SIZE:="">最新版本：V1.0</P>
 <p STYLE="margin: 0px 0px 22px; padding: 0px; color: rgb(51, 51, 51); font-family:" MICROSOFT="" FONT-SIZE:="">是否可用：是*</P>
 <p STYLE="margin: 0px 0px 22px; padding: 0px; color: rgb(51, 51, 51); font-family:" MICROSOFT="" FONT-SIZE:=""><span STYLE="word-spacing: normal;">正式用户：云圈子</SPAN>| 云人脉|</P>
