--- a/qr.html
+++ b/qr.html
@@ -50,7 +50,7 @@
                     fill: '#233',
                     background: null,
                     text: text,
-                    label: 'yunquanzi',
+                    label: 'yunquanzi.net',
                     fontname: 'sans',
                     fontcolor: '#233',
                     quiet: 0,
